<resources>
    <string name="app_name">Designing_Images</string>


    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <string name="post1">51</string>
    <string name="followers1">394</string>
    <string name="following1">626</string>

    <string name="text_heading">Complete Profile</string>

    <string name="card">Profile Details</string>
    <string name="card_details">Reels Details</string>

    <string name="linear_text">Images</string>
    <string name="linear_text1">Reels</string>
    <string name="linear_text2">News</string>
    <string name="linear_text3">Moives</string>

    <string name="thank">Thank you</string>


</resources>