<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityTwo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/TextView_normal"
            android:id="@+id/back"
            android:text="Back"/>

        <ImageView
            style="@style/TextView_normal"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_more_horiz_24" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img"
            android:scaleType="fitXY"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="160dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_1"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:src="@drawable/ic_baseline_camera_alt_24" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.4"
            android:id="@+id/first">

            <TextView
                style="@style/followers"
                android:text="@string/post"/>

            <TextView
                android:text="@string/post1"
                style="@style/rating" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/second"
            android:layout_margin="10dp"
            android:layout_weight="0.3">
            <TextView
                style="@style/followers"
                android:text="@string/followers"

                android:layout_weight="0.5"/>

            <TextView
                android:text="@string/followers1"
                style="@style/rating" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.3"
            >
            <TextView
                style="@style/followers"
                android:text="@string/following"/>

            <TextView
                android:text="@string/following1"
                style="@style/rating" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextView_Heading"
        android:layout_marginStart="10dp"
        android:text="@string/text_heading"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_margin="10dp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="5dp"

            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_videocam_24" />

            <TextView
                style="@style/card_view_details"
                android:text="@string/card"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginTop="110dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.8"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text"/>

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text1"/>

                    <!--                    <View-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="5dp"-->
                    <!--                        android:backgroundTint="@color/purple_700"/>-->






                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />


            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#CDDC39"
            app:cardCornerRadius="10dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_movie_24" />

            <TextView
                style="@style/card_view_details"
                android:text="@string/card_details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="110dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.8"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/linear_text"
                        android:text="@string/linear_text2"/>

                    <TextView
                        style="@style/linear_text"
                        android:layout_width="60dp"
                        android:text="@string/linear_text3" />


                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_arrow_forward_24"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <TextView
        style="@style/TextView_Thank"
        android:text="@string/thank"/>





</LinearLayout>